--- a/package.json
+++ b/package.json
@@ -1,21 +1,24 @@
 {
-  "name": "cms-exercise-api",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "type": "module",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon ./api/index.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "dotenv": "^16.3.1",
-    "dotenv-vault": "^1.25.0",
-    "express": "^4.18.2",
-    "nodemon": "^3.0.1",
-    "pg": "^8.11.3"
-  }
+	"name": "cms-exercise-api",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"type": "module",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"dev": "nodemon ./api/index.js"
+	},
+	"engines": {
+		"node": ">=16"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"dotenv": "^16.3.1",
+		"dotenv-vault": "^1.25.0",
+		"express": "^4.18.2",
+		"nodemon": "^3.0.1",
+		"pg": "^8.11.3"
+	}
 }
